--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-.DS_Store
-applet
-application.linux32
-application.linux64
-application.windows32
-application.windows64
-application.macosx
+.git
+.settings
+Debug/
+Documentation/
+*.g_c
+*.g_x
+.cwGeneratedFileSetLog
+ProjectInfo.xml
+Generated_Code/
